--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
@@ -24,6 +25,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.15.1",
     "sass": "^1.85.0",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.1",
